docs: measured verification cost + the cascade factor, and two bug fixes
Folds in the second machine's results and a real end-to-end cascade run, which
corrects an overclaim of mine, and fixes the two bugs the other machine hit
while measuring.

Verification cost, now measured against real databases (was a warm estimate):
  9800X3D / real LMDB           195.56 µs
  5800H  / 5.5 GB LMDB, cold    385.65 µs
Both near the COLD end - 50-95x my original 4.1 µs warm figure. A real scan
pays far more per false positive than the warm estimate suggested.

Cascade factor, measured end-to-end (TuneConfiguration sweepFilterTypes, real
LMDB, LMDB_ONLY, RTX 3070, winner grid, only GPU filter type varied):
  FUSE_8   231.4 M/s net, 3,615,569 survivors/s to the consumer
  FUSE_16  233.4 M/s net,    14,141 survivors/s to the consumer
Consumer load drops 256x (matches the 242x FPR ratio). Net throughput is
UNCHANGED - on this rig the GPU is the bottleneck, so the better filter does not
raise the ceiling. This refutes the doc's earlier flat "20x throughput" claim,
which was cost-per-candidate mistaken for pipeline throughput. FUSE_16 is free
insurance: same speed, 256x less serial-path pressure, a throughput win only
once storage saturates (at 385.65 µs the cost model gives FUSE_8 1571 ns vs
FUSE_16 87 ns, an 18x gap). net throughput = min(stage rates), not the sum of
per-candidate costs.

Also corrects the "single-threaded consumer" claim - ConsumerJava runs a
configurable pool, default 8; the runtime confirmed 8 threads.

Grid tuning documented as machine-specific: the 3070 optimum (22/256) and the
7900 XTX optimum (22/64) disagree on keysPerWorkItem, and the axes interact, so
the tuner exists rather than a constant. tune_arms.csv holds the arm tables.

Bug fixes found by the second machine:
- LMDBPersistence.close() used requireNonNull on fields init() may never have
  set. In the caller's finally block after a failed init (e.g.
  InaccessibleObjectException from a missing --add-ope